Avoid stretching out the cover image.

--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -2,18 +2,18 @@
 @import "globals/all";
 
 /*
- =============================
- Development Styles
- =============================
+=============================
+Development Styles
+=============================
 */
 .profiler-results {
   display: none;
 }
 
 /*
- =============================
- Global Header
- =============================
+=============================
+Global Header
+=============================
 */
 
 .navbar-toggle {
@@ -169,7 +169,7 @@
       background: $eggshell;
       &:hover {
         color: $darkOrange;
-      } 
+      }
     }
   }
 
@@ -282,33 +282,32 @@
 
 
 
-/* 
- =============================
- User Profile
- =============================
+/*
+=============================
+User Profile
+=============================
 */
 
 // user cover image
 .user-cover {
-  height: 370px;
+  height: 350px;
   overflow: hidden;
   position: relative;
   margin-top: -20px;
 
   .cover-photo {
-    min-height: 100%;
-    min-width: 100%;
-    @media (min-width: 768px) {
-      width: 100%;
-    } 
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 100%;
   }
-  
+
   .cover-overlay {
     background: url("cover-overlay.png") bottom left repeat-x;
     position: absolute;
     bottom: 0;
     width: 100%;
-  height: 243px;
+    height: 243px;
   }
 }
 
